--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello,It's Me</h3>
-            <h1>OMAIMA NAEEEM</h1>
+            <h1>OMAIMA NAEEM</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
             <h3>Passionate Full Stack Web Developer Building innovative and scalable web solutions to bring your ideas
                 to life.</h3>
